--- a/package.json
+++ b/package.json
@@ -3,13 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rpldy/mock-sender": "^0.15.0",
+    "@rpldy/sender": "^0.15.0",
+    "@rpldy/upload-button": "^0.15.0",
+    "@rpldy/upload-drop-zone": "^0.15.0",
+    "@rpldy/upload-paste": "^0.15.0",
+    "@rpldy/upload-preview": "^0.15.0",
+    "@rpldy/uploady": "^0.15.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "prop-types": "^15.7.2",
+    "rc-progress": "^3.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
+    "react-icons": "^4.3.1",
+    "react-lineto": "^3.3.0",
     "react-scripts": "4.0.3",
+    "react-switch": "^6.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
