--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "konva": "^8.3.2",
     "prop-types": "^15.7.2",
     "rc-progress": "^3.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-icons": "^4.3.1",
+    "react-konva": "^17.0.2-5",
     "react-lineto": "^3.3.0",
     "react-scripts": "4.0.3",
     "react-switch": "^6.0.0",
