--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "homepage": "https://carolinebelle.github.io/Segmentation/",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.3.1",
     "@rpldy/mock-sender": "^0.15.0",
     "@rpldy/sender": "^0.15.0",
     "@rpldy/upload-button": "^0.15.0",
