--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.66",
     "@mui/material": "^5.3.1",
+    "@reduxjs/toolkit": "^1.7.2",
     "@rpldy/mock-sender": "^0.15.0",
     "@rpldy/sender": "^0.15.0",
     "@rpldy/upload-button": "^0.15.0",
@@ -32,6 +33,7 @@
     "react-icons": "^4.3.1",
     "react-konva": "^17.0.2-5",
     "react-lineto": "^3.3.0",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-switch": "^6.0.0",
@@ -60,6 +62,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "gh-pages": "^3.2.3",
+    "typescript": "^4.5.5"
   }
 }
