--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER='google chrome' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -67,6 +67,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "gh-pages": "^3.2.3",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "^4.5.5"
   }
 }
