update homepage website to new repo

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chart-note",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://carolinebelle.github.io/Segmentation/",
+  "homepage": "https://carolinebelle.github.io/Angles/",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
