--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.7.2",
     "rc-progress": "^3.1.4",
     "react": "^17.0.2",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-firebase-hooks": "^5.0.0",
